# MyProjectPython_django

./: Dockerfile  demo.py  devices.csv  docker-compose.yaml  pyproject.toml  requirements.txt
module2/: log.txt
module2/blogapp/: admin.py  forms.py  models.py  urls.py  views.py
module2/blogapp/management/commands/: create_author.py  create_category.py  create_tag.py
module2/blogapp/migrations/: 0001_initial.py
module2/blogapp/templates/blogapp/: article_list.html
module2/locale/en/LC_MESSAGES/: django.po
module2/locale/ru/LC_MESSAGES/: django.po
module2/module2/: asgi.py  settings.py  urls.py  wsgi.py
module2/myapiapp/: serializers.py  urls.py  views.py
module2/myauth/: forms.py  models.py  tests.py  urls.py  views.py
module2/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
module2/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
module2/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
module2/shopapp/fixtures/: order-fixture.json  products-fixture.json  user-fixture.json
module2/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_order_options_alter_product_options_and_more.py  0008_order_receipt.py  0009_product_preview.py  0010_productimage.py  0011_alter_order_options_alter_product_options.py
mysite/mysite/: settings.py
samir/: manage.py
samir/samir/: asgi.py  settings.py  urls.py  wsgi.py
(+33 files in other folders)
